--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,16 @@ name = "ssdcg"
 version = "1.0.0"
 edition = "2018"
 
-[build-dependencies]
-lalrpop = "0.19.6"
-
 [dependencies]
+anyhow = "1.0.56"
 derive_more = "0.99.16"
-lalrpop-util = "0.19.6"
-regex = "1"
-rhai = "1.0.6"
+getset = "0.1.2"
+glob = "0.3.0"
+lazy_static = "1.4.0"
+permissions = "0.3.0"
+pest = "2.1.3"
+pest_derive = "2.1.0"
+regex = "1.5.5"
+rhai = "1.2.0"
+shellexpand = "2.1.0"
 structopt = "0.3.23"
