--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1.5.5"
 rhai = "1.5.0"
+ron = "0.8.0"
+serde = { version = "1.0.147", features = ["derive"] }
 shellexpand = "2.1.0"
 structopt = "0.3.26"
