--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ anyhow = "1.0.56"
 derive_more = "0.99.17"
 getset = "0.1.2"
 glob = "0.3.0"
-insta = { version = "1.21.1", features = ["ron"] }
 lazy_static = "1.4.0"
 permissions = "0.3.0"
 pest = "2.1.3"
@@ -24,3 +23,6 @@ ron = "0.8.0"
 serde = { version = "1.0.147", features = ["derive"] }
 shellexpand = "2.1.0"
 structopt = "0.3.26"
+
+[dev-dependencies]
+insta = { version = "1.21.1", features = ["ron"] }
