--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,12 @@ permissions = "0.3.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 regex = "1.5.5"
-rhai = "1.5.0"
+rhai = { version = "1.5.0", features = ["serde", "metadata", "internals"] }
 ron = "0.8.0"
 serde = { version = "1.0.147", features = ["derive"] }
 shellexpand = "2.1.0"
-structopt = "0.3.26"
+clap = { version = "4", features = ["derive", "wrap_help"] }
+clap_complete = "4"
 
 [dev-dependencies]
 insta = { version = "1.21.1", features = ["ron"] }
