--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,12 @@ serde = { version = "1.0.147", features = ["derive"] }
 shellexpand = "2.1.0"
 clap = { version = "4", features = ["derive", "wrap_help"] }
 clap_complete = "4"
+handlebars = "4.3.6"
+tera = "1.18.1"
+liquid = "0.26.1"
+sailfish = "0.6.0"
+serde_json = "1.0.94"
+liquid-derive = "0.26.1"
 
 [dev-dependencies]
 insta = { version = "1.21.1", features = ["ron"] }
