--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,21 +18,22 @@ derive_more = "0.99.17"
 getset = "0.1.2"
 glob = "0.3.1"
 lazy_static = "1.4.0"
-permissions = "0.4.1"
 pest = "2.5.6"
 pest_derive = "2.5.6"
-regex = "1.7.2"
+regex = "1.7.3"
 rhai = { version = "1.13.0", features = ["serde", "metadata", "internals"] }
 ron = "0.8.0"
 serde = { version = "1.0.158", features = ["derive"] }
-shellexpand = "3.0.0"
-clap = { version = "4", features = ["derive", "wrap_help"] }
-clap_complete = "4"
+shellexpand = "3.1.0"
+clap = { version = "4.1.13", features = ["derive", "wrap_help"] }
+clap_complete = "4.1.5"
 handlebars = "4.3.6"
 tera = "1.18.1"
 liquid = "0.26.1"
 serde_json = "1.0.94"
 liquid-derive = "0.26.1"
+faccess = "0.2.4"
+termcolor = "1.2.0"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["ron"] }
