--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "ssd"
-version = "0.9.1"
+version = "0.8.2"
 edition = "2021"
 license-file = "LICENSE"
 description = "A service and data description format + a code generator based on rhai scripts and templates"
-homepage = "https://github.com/hardliner66/ssd"
-repository = "https://github.com/hardliner66/ssd"
+homepage = "https://github.com/ssd-codegen/ssd"
+repository = "https://github.com/ssd-codegen/ssd"
 readme = "README.md"
 
 [[bin]]
