--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ name = "ssd"
 path = "src/main.rs"
 
 [dependencies]
-ssd-data = { path = "ssd-data" }
+ssd-data = { version = "0.10.0", path = "ssd-data" }
 anyhow = "1.0.70"
 derive_more = "0.99.17"
 getset = "0.1.2"
