use features to change whats available

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,22 +27,24 @@ serde = { version = "1.0.158", features = ["derive"] }
 shellexpand = "3.1.0"
 clap = { version = "4.1.13", features = ["derive", "wrap_help"] }
 clap_complete = "4.1.5"
-handlebars = "4.3.6"
-tera = "1.18.1"
-liquid = "0.26.1"
 serde_json = { version = "1.0.94", features = ["preserve_order"] }
-liquid-derive = "0.26.1"
 faccess = "0.2.4"
 termcolor = "1.2.0"
 extism = { version = "^1.0.0-rc3", optional = true }
 toml = { version = "0.8.8", features = ["preserve_order"] }
 serde_yaml = "0.9.27"
+liquid = { version = "0.26.1", optional = true }
+handlebars = { version = "4.3.6", optional = true }
+tera = { version = "1.18.1", optional = true }
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
 
 [features]
-default = ["wasm"]
+default = ["wasm", "liquid", "tera", "handlebars"]
+liquid = ["dep:liquid", "ssd-data/liquid"]
+tera = ["dep:tera"]
+handlebars = ["dep:handlebars"]
 wasm = ["dep:extism"]
 
 [workspace]
