--- a/ssd-data/Cargo.toml
+++ b/ssd-data/Cargo.toml
@@ -11,7 +11,11 @@ readme = "../README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-liquid = "0.26.1"
-liquid-derive = "0.26.1"
+liquid = { version = "0.26.1", optional = true }
+liquid-derive = { version = "0.26.1", optional = true }
 serde = { version = "1.0.158", features = ["derive"] }
 termcolor = "1.2.0"
+
+[features]
+default = []
+liquid = ["dep:liquid", "dep:liquid-derive"]
