--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ serde_yaml = "0.9.27"
 liquid = { version = "0.26.1", optional = true }
 handlebars = { version = "4.3.6", optional = true }
 tera = { version = "1.18.1", optional = true }
+indexmap = { version = "2.1.0", features = ["serde"] }
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
