--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
-        "./generators/wasm-example/Cargo.toml"
+        "./generators/wasm-example/Cargo.toml",
+        "./ssd-data/Cargo.toml"
     ]
 }
