remove liquid to simplify code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "rust-analyzer.linkedProjects": [
         "./generators/wasm-example/Cargo.toml",
         "./ssd-data/Cargo.toml"
+    ],
+    "cSpell.words": [
+        "anydata"
     ]
 }
