prepare for raw data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,14 @@
     ],
     "cSpell.words": [
         "anydata",
+        "canonicalize",
         "Rhai",
+        "rsplitn",
+        "shellexpand",
+        "splitn",
         "Tera",
-        "typemap"
+        "typemap",
+        "typepath",
+        "wasi"
     ]
 }
