--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,9 @@ serde_yaml = "0.9.27"
 handlebars = { version = "4.3.6", optional = true }
 tera = { version = "1.18.1", optional = true }
 indexmap = { version = "2.1.0", features = ["serde"] }
-ron = { version = "0.8.1", features = ["indexmap"] }
+ron = { version = "0.8.1", optional = true, features = ["indexmap"] }
 serde-value = "0.7.0"
+rsn = "0.1.0"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
@@ -47,6 +48,8 @@ default = ["wasm", "tera", "handlebars"]
 tera = ["dep:tera"]
 handlebars = ["dep:handlebars"]
 wasm = ["dep:extism"]
+ron = ["dep:ron"]
+all = ["tera", "handlebars", "wasm", "ron"]
 
 [workspace]
 members = ["ssd-data"]
