--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,11 @@ lazy_static = "1.4.0"
 pest = "2.5.6"
 pest_derive = "2.5.6"
 regex = "1.7.3"
-rhai = { version = "1.13.0", features = ["serde", "metadata", "internals"] }
+rhai = { version = "1.13.0", features = [
+    "serde",
+    "metadata",
+    "internals",
+], optional = true }
 serde = { version = "1.0.158", features = ["derive"] }
 shellexpand = "3.1.0"
 clap = { version = "4.1.13", features = ["derive", "wrap_help"] }
@@ -52,13 +56,14 @@ pythonize = { version = "0.20.0", optional = true }
 insta = { version = "1.29.0", features = ["json"] }
 
 [features]
-default = ["wasm", "tera", "handlebars"]
+default = ["wasm", "rhai", "tera", "handlebars"]
+rhai = ["dep:rhai"]
 tera = ["dep:tera"]
 handlebars = ["dep:handlebars"]
 wasm = ["dep:extism"]
 ron = ["dep:ron"]
 python = ["dep:pyo3", "dep:pythonize"]
-all = ["tera", "handlebars", "wasm", "ron", "python"]
+all = ["rhai", "tera", "handlebars", "wasm", "ron", "python"]
 
 [workspace]
 members = ["ssd-data"]
