--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ pythonize = { version = "0.20.0", optional = true }
 insta = { version = "1.29.0", features = ["json"] }
 
 [features]
-default = ["wasm", "rhai", "tera", "handlebars"]
+default = ["wasm", "rhai", "tera", "handlebars", "all"]
 rhai = ["dep:rhai"]
 tera = ["dep:tera"]
 handlebars = ["dep:handlebars"]
