--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,20 +50,19 @@ serde-value = "0.7.0"
 rsn = "0.1.0"
 
 pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
-pythonize = { version = "0.20.0", optional = true }
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
 
 [features]
-default = ["wasm", "rhai", "tera", "handlebars", "all"]
+default = ["wasm", "rhai", "tera", "handlebars"]
 rhai = ["dep:rhai"]
 tera = ["dep:tera"]
 handlebars = ["dep:handlebars"]
 wasm = ["dep:extism"]
 ron = ["dep:ron"]
-python = ["dep:pyo3", "dep:pythonize"]
-all = ["rhai", "tera", "handlebars", "wasm", "ron", "python"]
+all = ["rhai", "tera", "handlebars", "wasm", "ron"]
+_python = ["dep:pyo3", "ssd-data/_python"]
 
 [workspace]
 members = ["ssd-data"]
