--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ serde-value = "0.7.0"
 rsn = "0.1.0"
 
 pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
+once_cell = "1.19.0"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
