--- a/ssd-data/Cargo.toml
+++ b/ssd-data/Cargo.toml
@@ -14,6 +14,7 @@ readme = "../README.md"
 serde = { version = "1.0.158", features = ["derive"] }
 termcolor = { version = "1.2.0", optional = true }
 pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
+serde-value = "0.7.0"
 
 [features]
 default = []
