--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,69 +1,16 @@
 [package]
-name = "ssd"
-version = "0.17.2"
+name = "ssd-web"
+version = "0.1.0"
 edition = "2021"
-license-file = "LICENSE"
-description = "A service and data description format + a code generator based on rhai scripts and templates"
-homepage = "https://github.com/ssd-codegen/ssd"
-repository = "https://github.com/ssd-codegen/ssd"
-readme = "README.md"
+publish = true
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-[[bin]]
-name = "ssd"
-path = "src/main.rs"
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ssd-data = { version = "0.17.1", path = "ssd-data", features = [
-    "_access_functions",
-] }
-anyhow = "1.0.70"
-derive_more = "0.99.17"
-getset = "0.1.2"
-glob = "0.3.1"
-lazy_static = "1.4.0"
-pest = "2.5.6"
-pest_derive = "2.5.6"
-regex = "1.7.3"
-rhai = { version = "1.13.0", features = [
-    "serde",
-    "metadata",
-    "internals",
-], optional = true }
-serde = { version = "1.0.158", features = ["derive"] }
-shellexpand = "3.1.0"
-clap = { version = "4.1.13", features = ["derive", "wrap_help"] }
-clap_complete = "4.1.5"
-serde_json = { version = "1.0.94", features = ["preserve_order"] }
-faccess = "0.2.4"
-termcolor = "1.2.0"
-extism = { version = "^1.0.0-rc3", optional = true }
-toml = { version = "0.8.8", features = ["preserve_order"] }
-serde_yaml = "0.9.27"
-handlebars = { version = "4.3.6", optional = true }
-tera = { version = "1.18.1", optional = true }
-ron = { version = "0.8.1", optional = true }
-serde-value = "0.7.0"
-rsn = "0.1.0"
-
-pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
-once_cell = "1.19.0"
-
-[dev-dependencies]
-insta = { version = "1.29.0", features = ["json"] }
-
-[features]
-default = ["rhai", "handlebars"]
-rhai = ["dep:rhai"]
-tera = ["dep:tera"]
-handlebars = ["dep:handlebars"]
-wasm = ["dep:extism"]
-ron = ["dep:ron"]
-all = ["rhai", "tera", "handlebars", "wasm", "ron"]
-_python = ["dep:pyo3", "ssd-data/_python"]
+dioxus = "0.4.3"
+dioxus-web = "0.4.3"
+ssd = { version = "0.17.2", path = "crates/ssd", default-features = false, features = ["_web"] }
 
 [workspace]
-members = ["ssd-data"]
-exclude = ["example-generators/wasm-example"]
+members = ["crates/ssd", "crates/ssd-data"]
+exclude = ["generators/wasm-example"]
