--- a/crates/ssd/Cargo.toml
+++ b/crates/ssd/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ssd"
 version = "0.18.0"
 edition = "2021"
+license-file = "../../LICENSE"
+description = "A service and data description format + a code generator based on rhai scripts and templates"
+homepage = "https://github.com/ssd-codegen/ssd"
+repository = "https://github.com/ssd-codegen/ssd"
+readme = "../../README.md"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
