--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test -p ssd --verbose
 
     - name: Run build
       run: cargo build --release
