--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,7 +5,7 @@ permissions:
   checks: none
   contents: none
   deployments: none
-  id-token: none
+  id-token: write
   issues: none
   discussions: none
   packages: none
