--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test -p ssd --verbose
 
     - name: Run build
       run: |
-        cargo build --release
+        cargo build -p ssd --release
         strip --strip-all ./target/release/ssd
         mv ./target/release/ssd ./target/release/ssd-linux
 
@@ -70,11 +70,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test -p ssd --verbose
 
     - name: Run build
       run: |
-        cargo build --release
+        cargo build -p ssd --release
         mv ./target/release/ssd ./target/release/ssd-macos
 
     - name: Upload release
@@ -98,7 +98,7 @@ jobs:
       run: cargo test -p ssd --verbose
 
     - name: Run build
-      run: cargo build --release
+      run: cargo build -p ssd --release
 
     - name: Upload release
       id: upload-release-windows
