--- a/crates/ssd/Cargo.toml
+++ b/crates/ssd/Cargo.toml
@@ -32,7 +32,10 @@ rhai = { version = "1.13.0", features = [
 ], optional = true }
 serde = { version = "1.0.158", features = ["derive"] }
 shellexpand = "3.1.0"
-clap = { version = "4.1.13", optional = true, features = ["derive", "wrap_help"] }
+clap = { version = "4.1.13", optional = true, features = [
+    "derive",
+    "wrap_help",
+] }
 clap_complete = { version = "4.1.5", optional = true }
 serde_json = { version = "1.0.94", features = ["preserve_order"] }
 termcolor = "1.2.0"
@@ -47,6 +50,7 @@ rsn = "0.1.0"
 
 pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
 once_cell = "1.19.0"
+script-format = "0.9.0"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
