--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ publish = false
 [dependencies]
 dioxus = "0.4.3"
 dioxus-web = "0.4.3"
-ssd = { version = "0.20.1", path = "crates/ssd", default-features = false, features = ["_web"] }
+ssd = { version = "0.20.1", path = "crates/ssd", default-features = false, features = [
+    "_web",
+] }
 web-sys = "0.3.66"
 
 [workspace]
