--- a/crates/ssd/Cargo.toml
+++ b/crates/ssd/Cargo.toml
@@ -55,8 +55,14 @@ script-format = "0.9.0"
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
 
+
+[build-dependencies]
+cc = "1.2.11"
+
 [features]
-default = ["rhai", "handlebars", "_bin"]
+default = ["rhai", "handlebars", "_bin", "experimental"]
+experimental = ["c_parser"]
+c_parser = []
 rhai = ["dep:rhai"]
 tera = ["dep:tera"]
 handlebars = ["dep:handlebars"]
