add most of the needed functionality for the c parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,14 @@
         "typemap",
         "typepath",
         "wasi"
-    ]
+    ],
+    "files.associations": {
+        "*.smr": "scheme",
+        "*.fnl": "scheme",
+        "*.urn": "scheme",
+        "*.prf": "ini",
+        "*.dhall": "haskell",
+        "bsconfig.json": "jsonc",
+        "stdlib.h": "c"
+    }
 }
