--- a/crates/ssd-data/Cargo.toml
+++ b/crates/ssd-data/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "ssd-data"
-version = "0.20.1"
-edition = "2021"
-license-file = "../../LICENSE"
-description = "A service and data description format + a code generator based on rhai scripts and templates"
-homepage = "https://github.com/ssd-codegen/ssd"
-repository = "https://github.com/ssd-codegen/ssd"
-readme = "../../README.md"
+version.workspace = true
+edition.workspace = true
+license-file.workspace = true
+description.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
