--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ description = "A service and data description format + a code generator based on
 homepage = "https://github.com/ssd-codegen/ssd"
 repository = "https://github.com/ssd-codegen/ssd"
 readme = "README.md"
+
+[workspace.dependencies]
+ssd-data = { version = "0.23.0", path = "crates/ssd-data" }
