--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ssd-web"
-version = "0.22.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 publish = false
 
 [dependencies]
