--- a/crates/ssd/Cargo.toml
+++ b/crates/ssd/Cargo.toml
@@ -26,7 +26,7 @@ lazy_static = "1.4.0"
 pest = "2.5.6"
 pest_derive = "2.5.6"
 regex = "1.7.3"
-rhai = { version = "1.13.0", features = [
+rhai = { version = "1.23.0", features = [
     "serde",
     "metadata",
     "internals",
@@ -50,7 +50,7 @@ serde-value = "0.7.0"
 rsn = "0.2.0"
 pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
 once_cell = "1.19.0"
-script-format = "2.1.0"
+script-format = "2.1.1"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["json"] }
@@ -64,5 +64,5 @@ wasm = ["dep:extism"]
 ron = ["dep:ron"]
 all = ["rhai", "tera", "handlebars", "wasm", "ron"]
 _python = ["dep:pyo3", "ssd-data/_python"]
-_web = ["rhai", "rhai/wasm-bindgen"]
+_web = ["rhai", "rhai/wasm-bindgen", "script-format/web"]
 _bin = ["dep:clap", "dep:clap_complete"]
