--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -52,7 +52,7 @@ jobs:
             - name: publish
               run: |
                   cd web
-                  dx build --release --web
+                  dx build --release
                   mv docs ../
 
             - name: Setup Pages
