--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -47,7 +47,7 @@ jobs:
             - name: install dependencies
               run: |
                   rustup target add wasm32-unknown-unknown
-                  cargo binstall dioxus-cli --version 0.4.3
+                  cargo binstall dioxus-cli --version 0.4.3 --force
 
             - name: publish
               run: |
